# openjd-rs

./: AGENTS.md  Cargo.toml  RELEASING.md  release-plz.toml
.github/workflows/: ci.yml  openjd-for-js.yml  release-plz.yml
crates/openjd-cli/: Cargo.toml
crates/openjd-cli/src/: summary.rs
crates/openjd-cli/src/run/: mod.rs
crates/openjd-cli/tests/: cli_tests.rs
crates/openjd-expr/: Cargo.toml
crates/openjd-expr/src/: default_library.rs  error.rs  format_string.rs  lib.rs  range_expr.rs  symbol_table.rs  value.rs
crates/openjd-expr/src/eval/: evaluator.rs
crates/openjd-expr/src/functions/: arithmetic.rs  comparison.rs  list.rs  path.rs  regex.rs  string.rs
crates/openjd-expr/tests/: test_error_formatting.rs  test_function_context.rs  test_function_library.rs  test_lists.rs  test_memory.rs  test_method_coercion.rs  test_misc_builtins.rs  test_path_mapping.rs  test_paths.rs  test_rfc_examples.rs  test_slicing.rs  test_strings.rs  test_symbol_table.rs  test_types_evaluate.rs  test_unresolved_eval.rs  test_uri_paths.rs
crates/openjd-for-js/: Cargo.toml
crates/openjd-for-js/js-tests/: smoke.test.js
crates/openjd-for-js/src/: errors.rs  model.rs
crates/openjd-for-js/tests/: test_decode.rs  test_path_parameter_options.rs  test_supported_extensions.rs
crates/openjd-model/: Cargo.toml  LICENSE-Apache-2.0
crates/openjd-model/src/: lib.rs  test_instantiate_and_display.rs  types.rs
crates/openjd-model/src/job/: mod.rs  step_dependency_graph.rs  step_param_space.rs
crates/openjd-model/src/job/create_job/: instantiate.rs  mod.rs  parameters.rs  ranges.rs
crates/openjd-model/src/template/: actions.rs  mod.rs  task_parameters.rs
crates/openjd-model/src/template/validate_v2023_09/: feature_bundle_1.rs  format_strings.rs  limits.rs  mod.rs  structure.rs  task_chunking.rs  wrap_actions.rs
crates/openjd-model/tests/: integration.rs  test_capabilities.rs  test_chunk_int.rs  test_combination_expr.rs  test_create_job.rs  test_embedded.rs  test_environment_template.rs  test_job_parameters.rs  test_merge_job_parameters.rs  test_parameter_space.rs  test_resolved_bindings.rs  test_step_param_space_iter.rs  test_template_posix_paths.rs  test_template_variables.rs
crates/openjd-model/tests/integration/: test_actions_and_steps.rs  test_step_param_space_iter.rs  test_wrap_actions.rs
crates/openjd-sessions/: Cargo.toml  build.rs
crates/openjd-sessions/src/: cross_user_helper.rs  embedded_files.rs  error.rs  helper_binary.rs  lib.rs  session.rs  session_user.rs  subprocess.rs  win32.rs
crates/openjd-sessions/src/helper/: Cargo.toml
crates/openjd-sessions/src/helper/src/: main.rs  runner_win.rs
crates/openjd-sessions/src/helper/tests/: test_helper_protocol.rs
crates/openjd-sessions/src/runner/: env_script.rs  mod.rs  step_script.rs
crates/openjd-sessions/tests/: integration.rs  test_cross_user_windows.rs  test_embedded_files.rs  test_session.rs  test_session_scenarios.rs
crates/openjd-sessions/tests/integration/: test_path_mapping_materialize.rs  test_session.rs  test_session_env_step.rs  test_session_scenarios.rs  test_wrap_actions.rs
crates/openjd-sessions/tests/support/: spawn_child.bat
crates/openjd-snapshots/: Cargo.toml
crates/openjd-snapshots/src/: codec.rs
crates/openjd-snapshots/src/ops/: hash_upload.rs
crates/openjd-snapshots/tests/: test_quality_probes.rs  test_upload_dedup.rs
reports/: expr-model-future-revision-readiness.md  expr-quality-evaluation-report.md  model-quality-evaluation-report.md  snapshots-quality-evaluation-report.md
specs/: windows-cross-user-helper.md
specs/expr/: range-expr.md  symbol-table.md  values.md
specs/model/: README.md  architecture.md  error-handling.md  job-creation.md  job-types.md  parameter-space.md  parameters.md  parsing.md  public-api.md  step-dependencies.md  template-types.md  validation.md
specs/openjd-for-js/: spec.md
specs/sessions/: embedded-files.md
