[workspace]
members = [
    "crates/openjd-expr",
    "crates/openjd-model",
    "crates/openjd-sessions",
    "crates/openjd-cli",
    "crates/openjd-snapshots",
    "crates/openjd-for-js",
]
resolver = "2"

# Workspace-wide metadata inherited by crates via `*.workspace = true`. Each
# publishable crate sets its own `version` (independent versioning) but inherits
# everything else from here. Non-publishable crates (openjd-snapshots,
# openjd-for-js) inherit the workspace version below as a convenience — they
# have `publish = false` so the version number is not meaningful on crates.io.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "(Apache-2.0 OR MIT)"
repository = "https://github.com/OpenJobDescription/openjd-rs"
homepage = "https://github.com/OpenJobDescription/openjd-rs"
readme = "README.md"
rust-version = "1.92"
authors = ["Amazon Web Services"]
keywords = ["openjd", "openjobdescription", "render-farm", "job-template", "rendering"]
categories = ["command-line-utilities", "parser-implementations"]

[workspace.dependencies]
shlex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.25"
thiserror = "2"
regex = "1"
regex-syntax = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
