[package]
name = "openjd-expr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Open Job Description expression language — types, evaluation, and path mapping"
keywords = ["openjd", "openjobdescription", "expression-language", "parser", "evaluator"]
categories = ["parser-implementations", "template-engine"]

[dependencies]
shlex = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Ruff Python parser for EXPR extension expression parsing.
# The EXPR language is defined as a subset of Python expression syntax, and the
# spec recommends the ruff parser for Rust implementations. It's the most actively
# maintained Python parser in the Rust ecosystem (daily commits, backed by Astral).
# Published to crates.io by the RustPython project under the `rustpython-` prefix
# (https://github.com/RustPython/RustPython/pull/7532).
# See specs/expr/parser.md for the full evaluation.
ruff_python_parser = { package = "rustpython-ruff_python_parser", version = "0.15.8" }
ruff_python_ast = { package = "rustpython-ruff_python_ast", version = "0.15.8" }
ruff_text_size = { package = "rustpython-ruff_text_size", version = "0.15.8" }
