[package]
name = "openjd-for-js"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open Job Description for ECMAScript — model, expression, and validation via WebAssembly"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openjd-model = { path = "../openjd-model" }
openjd-expr = { path = "../openjd-expr" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
