[package]
name = "openjd-model"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Open Job Description model library — parsing, validation, and job creation"
keywords = ["openjd", "openjobdescription", "job-template", "yaml", "validation"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
openjd-expr = { path = "../openjd-expr", version = "0.1.0" }
indexmap = { version = "2", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
