[package]
name = "openjd-sessions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Open Job Description sessions — local job execution runtime"
keywords = ["openjd", "openjobdescription", "session", "subprocess", "runtime"]
categories = ["command-line-utilities", "os"]
build = "build.rs"

[features]
test-utils = []

[dependencies]
openjd-expr = { path = "../openjd-expr", version = "0.1.0" }
openjd-model = { path = "../openjd-model", version = "0.1.0" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }
shlex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "time", "sync", "macros", "fs"] }
tokio-util = "0.7"
log = { version = "0.4", features = ["kv", "kv_std"] }
bitflags = "2"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.32"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process", "user", "fs"] }

[target.'cfg(windows)'.dependencies]
which = "8.0.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_RemoteDesktop",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]

[dev-dependencies]
tempfile = "3"
testing_logger = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
openjd-sessions = { path = ".", features = ["test-utils"] }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
