[workspace]

[package]
name = "openjd_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "poll"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
